jitfailure-dolfin_expression_fd3ae06dc2864bccde7da95faa56964b/error.log
/tmp/tmpifdmnpia/dolfin_expression_fd3ae06dc2864bccde7da95faa56964b.cpp: In member function 'virtual void dolfin::dolfin_expression_fd3ae06dc2864bccde7da95faa56964b::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmpifdmnpia/dolfin_expression_fd3ae06dc2864bccde7da95faa56964b.cpp:61:38: error: expected ':' before ';' token
   61 |           values[0] = x[0] < 1 ? x[0];
      |                                      ^
/tmp/tmpifdmnpia/dolfin_expression_fd3ae06dc2864bccde7da95faa56964b.cpp:61:38: error: expected primary-expression before ';' token
